--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.003   2021-01-18  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Mention Crypt::Misc.
+
+
 0.002   2021-01-18  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
