--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.004   2021-01-20  Released-By: PERLANCAR; Urgency: medium
+
+	- Optimize a bit.
+
+
 0.003   2021-01-18  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
